Added user language setting
